# SnakeGame

./: Apple.cpp  Apple.h  Banana.cpp  Banana.h  CMakeLists.txt  Enemy.h  Food.cpp  Food.h  GameOver.cpp  GameOver.h  LevelParameters.cpp  LevelParameters.h  LevelUpdater.cpp  LevelUpdater.h  Movement.cpp  Movement.h  Obstacles.cpp  Obstacles.h  Orange.cpp  Orange.h  Spider.cpp  Spider.h  main.cpp
